# QQ_Bot_Test

./: .gitignore  INSTALL.md  IP_WHITELIST.md  PYTHON_VERSION.md  QUICKSTART.md  README.md  RESTART_GUIDE.md  SETUP_GUIDE.md  bot.py  config.yaml  nonebot_config.py  pyproject.toml  requirements.txt  restart_bot.bat  restart_bot.ps1
plugins/: __init__.py  ai_chat.py  chengyu.py  golden_sentence.py  scenery.py  setu.py  setu_new.py  utils.py
